apps/management/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:latest
          volumeMounts:
            - name: config
              mountPath: /etc/pihole
            - name: dnsmasq
              mountPath: /etc/dnsmasq.d
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pihole-config-pvc # Ceph RBD
        - name: dnsmasq
          persistentVolumeClaim:
            claimName: pihole-dnsmasq-pvc # Ceph RBD
