apps/management/pihole/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-external
  namespace: management
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.111.53
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
    - name: http
      port: 80
      targetPort: 80
